--- a/wolfclu/include.am
+++ b/wolfclu/include.am
@@ -5,6 +5,7 @@
 
 nobase_include_HEADERS+=wolfclu/version.h \
                         wolfclu/client.h \
+                        wolfclu/server.h \
                         wolfclu/clu_header_main.h \
                         wolfclu/clu_optargs.h \
                         wolfclu/clu_log.h \
