--- a/src/include.am
+++ b/src/include.am
@@ -6,41 +6,43 @@
 bin_PROGRAMS = wolfssl
 wolfssl_SOURCES = src/clu_main.c \
                     src/clu_log.c \
-					src/tools/clu_funcs.c \
-					src/tools/clu_hex_to_bin.c \
-					src/tools/clu_rand.c \
-					src/crypto/clu_crypto_setup.c \
-					src/crypto/clu_encrypt.c \
-					src/crypto/clu_decrypt.c \
-					src/crypto/clu_evp_crypto.c \
-					src/hash/clu_hash_setup.c \
-					src/hash/clu_hash.c \
-					src/hash/clu_alg_hash.c \
-					src/benchmark/clu_bench_setup.c \
-					src/benchmark/clu_benchmark.c \
-					src/x509/clu_request_setup.c \
-					src/x509/clu_ca_setup.c \
-					src/x509/clu_cert_setup.c \
-					src/x509/clu_parse.c \
-					src/x509/clu_config.c \
-					src/x509/clu_x509_sign.c \
-					src/genkey/clu_genkey_setup.c \
-					src/genkey/clu_genkey.c \
-					src/ecparam/clu_ecparam.c \
-					src/sign-verify/clu_sign.c \
-					src/sign-verify/clu_verify.c \
-				    src/sign-verify/clu_x509_verify.c \
-				    src/sign-verify/clu_crl_verify.c \
-				    src/sign-verify/clu_sign_verify_setup.c \
-				    src/sign-verify/clu_dgst_setup.c \
-				    src/certgen/clu_certgen_ed25519.c \
-				    src/certgen/clu_certgen_rsa.c \
-				    src/pkey/clu_rsa.c \
-				    src/pkey/clu_pkey.c \
-				    src/pkcs/clu_pkcs12.c \
-				    src/client/client.c \
-				    src/client/clu_client_setup.c \
-				    src/dsa/clu_dsa.c \
-				    src/dh/clu_dh.c
+                    src/tools/clu_funcs.c \
+                    src/tools/clu_hex_to_bin.c \
+                    src/tools/clu_rand.c \
+                    src/crypto/clu_crypto_setup.c \
+                    src/crypto/clu_encrypt.c \
+                    src/crypto/clu_decrypt.c \
+                    src/crypto/clu_evp_crypto.c \
+                    src/hash/clu_hash_setup.c \
+                    src/hash/clu_hash.c \
+                    src/hash/clu_alg_hash.c \
+                    src/benchmark/clu_bench_setup.c \
+                    src/benchmark/clu_benchmark.c \
+                    src/x509/clu_request_setup.c \
+                    src/x509/clu_ca_setup.c \
+                    src/x509/clu_cert_setup.c \
+                    src/x509/clu_parse.c \
+                    src/x509/clu_config.c \
+                    src/x509/clu_x509_sign.c \
+                    src/genkey/clu_genkey_setup.c \
+                    src/genkey/clu_genkey.c \
+                    src/ecparam/clu_ecparam.c \
+                    src/sign-verify/clu_sign.c \
+                    src/sign-verify/clu_verify.c \
+                    src/sign-verify/clu_x509_verify.c \
+                    src/sign-verify/clu_crl_verify.c \
+                    src/sign-verify/clu_sign_verify_setup.c \
+                    src/sign-verify/clu_dgst_setup.c \
+                    src/certgen/clu_certgen_ed25519.c \
+                    src/certgen/clu_certgen_rsa.c \
+                    src/pkey/clu_rsa.c \
+                    src/pkey/clu_pkey.c \
+                    src/pkcs/clu_pkcs12.c \
+                    src/client/client.c \
+                    src/client/clu_client_setup.c \
+                    src/dsa/clu_dsa.c \
+                    src/dh/clu_dh.c \
+                    src/server/server.c \
+                    src/server/clu_server_setup.c
 
 
